telerun-out/0185621/compile-log.txt
/tmp/tmpkm_v10p2/source.cpp:141:13: error: use of undeclared identifier 'combined_or'
  141 |             combined_or = 0;
      |             ^
/tmp/tmpkm_v10p2/source.cpp:144:17: error: use of undeclared identifier 'combined_or'
  144 |                 combined_or |= mask_vecs[k]; // bitwise OR
      |                 ^
/tmp/tmpkm_v10p2/source.cpp:148:20: error: use of undeclared identifier 'combined_or'
  148 |             while (combined_or != 0) {
      |                    ^
/tmp/tmpkm_v10p2/source.cpp:201:17: error: use of undeclared identifier 'combined_or'
  201 |                 combined_or = 0;
      |                 ^
/tmp/tmpkm_v10p2/source.cpp:204:21: error: use of undeclared identifier 'combined_or'
  204 |                     combined_or |= mask_vecs[k]; // bitwise OR
      |                     ^
5 errors generated.
